[package]
name = "alice-sync"
version = "0.6.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
license = "AGPL-3.0"
description = "P2P synchronization via event diffing, not data transfer"
repository = "https://github.com/ext-sakamoro/ALICE-Sync"
keywords = ["p2p", "sync", "distributed", "compression", "alice"]
categories = ["network-programming", "compression"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bitcode = "0.6"
tokio = { version = "1.0", features = ["full"], optional = true }
crossbeam-channel = "0.5"
rustc-hash = "2.1"
wide = "0.7"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
alice-physics = { path = "../ALICE-Physics", optional = true }
alice-db = { path = "../ALICE-DB", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[features]
default = ["std"]
std = []
async = ["tokio"]
simd = []
python = ["pyo3", "numpy"]  # Python bindings (PyO3 + NumPy zero-copy)
physics = ["alice-physics"]  # ALICE-Physics bridge (InputFrame ↔ FrameInput, rollback)
telemetry = ["alice-db"]    # Sync telemetry recording via ALICE-DB

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "sync_bench"
harness = false
